@@ -13,6 +13,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #23485: select.select() is now retried automatically with the
+  recomputed timeout when interrupted by a signal, except if the signal handler
+  raises an exception. This change is part of the PEP 475.
+
 - Issue #23752: When built from an existing file descriptor, io.FileIO() now
   only calls fstat() once. Before fstat() was called twice, which was not
   necessary.
